2003-02-14  Johannes Meixner <jsmeix@suse.de>

	* db/source/printer/158816.xml, db/source/printer/365001.xml,
	  db/source/printer/552146.xml, db/source/printer/70496.xml,
	  db/source/printer/70528.xml: Assigned the "ljetplus" and
	  "laserjet" drivers to these printers and made "ljetplus"
	  the default driver.

	* db/source/printer/Kyocera-F-1000.xml,
	  db/source/printer/Kyocera-F-1200S.xml,
	  db/source/printer/Kyocera-F-1800.xml,
	  db/source/printer/Kyocera-F-2000.xml,
	  db/source/printer/Kyocera-F-2010.xml,
	  db/source/printer/Kyocera-F-2200.xml,
	  db/source/printer/Kyocera-F-2200S.xml,
	  db/source/printer/Kyocera-F-3000.xml,
	  db/source/printer/Kyocera-F-3010.xml,
	  db/source/printer/Kyocera-F-5000.xml,
	  db/source/printer/Kyocera-F-800.xml,
	  db/source/printer/Kyocera-F-820.xml,
	  db/source/printer/Kyocera-P-2002.xml: Completed the Kyocera F
	  series.

	* db/source/driver/Postscript.xml, db/source/driver/laserjet.xml,
	  db/source/driver/ljetplus.xml: Added approprate models of
	  Kyocera's F series to the lists of supported printers.

2003-02-13  Till Kamppeter <till.kamppeter@gmx.net>

	* db/source/printer/74208.xml, db/source/printer/185033.xml,
	  db/source/printer/142944.xml, db/source/printer/100704.xml,
	  db/source/printer/HP-OfficeJet_[67]??.xml: Switched recommended
	  driver for the HP OfficeJet 600 and 700 series back to "hpijs",
	  the problems of these printers hanging after every job are
	  fixed.
	
2003-02-03  Till Kamppeter <till.kamppeter@gmx.net>

	* README, USAGE: Updated for Foomatic 3.0.0beta1 (unprintable
	  margins).

2003-01-31  Till Kamppeter <till.kamppeter@gmx.net>

	* db/source/printer/287273.xml, db/source/printer/287337.xml,
	  db/source/printer/287401.xml, db/source/printer/287657.xml,
	  db/source/printer/287689.xml: Removed the auto-detection entries
	  "(see notes)" and the "<unverified />" tags.

	* db/source/printer/59360.xml, db/source/printer/56608.xml: