@@ -1,0 +1,48 @@
+<printer id="printer/Epson-Stylus_Photo_900">
+  <make>Epson</make>
+  <model>Stylus Photo 900</model>
+  <mechanism>
+    <inkjet/>
+    <color/>
+    <resolution>
+      <dpi>
+        <x>2880</x>
+        <y>720</y>
+      </dpi>
+    </resolution>
+    <consumables>
+    <!--no comments--><!--one or more "partno" elements.--></consumables>
+  </mechanism>
+  <url></url>
+  <lang>
+    <escp/><!--no pjl-->
+    <text>
+      <charset>us-ascii</charset>
+    </text>
+  </lang>
+  <autodetect>
+    <general>
+      <ieee1284>MFG:EPSON;CMD:ESCPL2,BDC,D4;MDL:Stylus Photo 900;CLS:PRINTER;DES:EPSON Stylus Photo 900;</ieee1284>
+      <manufacturer>EPSON</manufacturer>
+      <model>Stylus Photo 900</model>
+      <description>EPSON Stylus Photo 900</description>
+      <commandset>ESCPL2,BDC,D4</commandset>
+    </general>
+  </autodetect>
+  <functionality>A</functionality>
+  <driver>gimp-print</driver>
+  <!--no "contrib_url"-->
+  <comments>
+    <en>
+
+    6-color CMYKcm printing, roll paper feeder, Tray for direct
+    printing on CDs, USB and parallel port.&lt;p&gt;
+
+    The printer is compatible to the Epson Stylus Photo 915, so choose
+    this model (using the GIMP-Print driver) as long as the Epson
+    Stylus Photo 900 is not explicitly supported by
+    GIMP-Print.&lt;p&gt;
+
+    </en>
+  </comments>
+</printer>
