@@ -1,3 +1,8 @@
+2003-02-15  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* db/source/printer/Epson-Stylus_Photo_900.xml: Added Epson Stylus
+	  Photo 900.
+
 2003-02-14  Johannes Meixner <jsmeix@suse.de>
 
 	* db/source/printer/158816.xml, db/source/printer/365001.xml,
